--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /RoboV2/nbproject/private/
 /RoboV2/build/
 /BodeTracker/
+/miniexemplos/nbproject/private/
+/miniexemplos/build/
+/Estacionamento/nbproject/private/
